plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
}

group 'io.vproxy'
version '1.1.2'

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    api group: 'io.vproxy', name: 'vjson', version: '1.5.2'
}

compileJava {
    doFirst {
        options.compilerArgs << '--module-path' << classpath.asPath
    }
    options.compilerArgs << '--add-modules' << [
            'vjson',
    ].join(',')
    options.compilerArgs += '--add-exports=java.base/jdk.internal.misc=io.vproxy.base'
}

sourceCompatibility = 11.0
targetCompatibility = 11.0

java {
    withSourcesJar()
    withJavadocJar()
}

javadoc {
    exclude '**/*.java'
}

tasks.withType(GenerateModuleMetadata) {
    enabled = false
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
            artifactId 'commons'

            pom {
                name = 'commons'
                description = 'a commons library extracted from vproxy base module'
                url = 'http://github.com/vproxy-tools/commons'
                licenses {
                    license {
                        name = 'MIT License'
                        url = 'https://github.com/vproxy-tools/commons/blob/master/LICENSE'
                    }
                }
                developers {
                    developer {
                        id = 'wkgcass'
                        name = 'K.G. Wang'
                        email = 'wkgcass@hotmail.com'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/vproxy-tools/commons.git'
                    developerConnection = 'scm:git:git://github.com/vproxy-tools/commons.git'
                    url = 'https://github.com/vproxy-tools/commons'
                }
            }
        }
    }
    repositories {
        maven {
            credentials {
                username 'wkgcass'
                password System.getProperty("MavenPublishPassword")
            }
            def releasesRepoUrl = 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/'
            def snapshotsRepoUrl = 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
            url = version.contains('-DEV') ? snapshotsRepoUrl : releasesRepoUrl
        }
    }
}

signing {
    sign publishing.publications.maven
}
